# firstproj

./: Makefile  pyproject.toml
brain_games/: cli.py
brain_games/scripts/: brain_games.py
